# ha-philips-airpurifier

./: CODEX.md  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: stale.yml  validate.yml
custom_components/philips_airpurifier/: __init__.py  client.py  config_flow.py  const.py  coordinator.py  device_models.py  entity.py  event.py  manifest.json  repairs.py  sensor.py  strings.json
custom_components/philips_airpurifier/translations/: en.json
scripts/: develop
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_event.py  test_repairs.py
