[project]
name = "ha-philips-airpurifier"
version = "0.28.0"
description = "Home Assistant integration for Philips Air Purifiers via CoAP"
requires-python = ">=3.14.2"
license = {text = "MIT"}
dependencies = [
    "philips-airctrl==1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    # Linting/formatting and type checking. Required by scripts/lint,
    # scripts/lint-check, scripts/type-check and the lint CI workflow, which all
    # invoke `uv run ruff` / `uv run pyright`. ruff is pinned to the
    # pre-commit-config version to avoid format drift between the two.
    "ruff==0.15.16",
    "pyright",
    # The homeassistant floor keeps the resolver pinned to the latest stable
    # Home Assistant. Without a floor, `uv lock --upgrade` can resolve backwards
    # to ancient releases. pytest-homeassistant-custom-component is left
    # unpinned so the resolver selects the release whose pinned HA matches the
    # floor (the newest phacc targets pre-release HA). Dependabot (homeassistant
    # group) bumps the floor on every stable HA release.
    "homeassistant>=2026.6.0",
    "pytest-homeassistant-custom-component",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = [".git", "config"]

[tool.mypy]
python_version = "3.14"
show_error_codes = true
strict = true

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "S",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["homeassistant", "tests"]
forced-separate = ["tests"]
combine-as-imports = true

[tool.coverage.run]
source = ["custom_components/philips_airpurifier"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.uv]
# Security overrides: force patched versions of vulnerable transitive dependencies
# pinned by Home Assistant at vulnerable versions.
override-dependencies = [
    "pyjwt>=2.12.0",   # CVE-2026-32597
    "uv>=0.11.6",      # GHSA-pjjw-68hj-v9mw
]
